--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "flowbite-react": "^0.7.2",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^6.0.0",
     "query-string": "^8.1.0",
@@ -25,6 +30,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.3",
     "spotify-web-api-js": "^1.5.2",
+    "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
