--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^6.0.0",
@@ -32,6 +33,11 @@
     "spotify-web-api-js": "^1.5.2",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
